crates/nm-tui/tests/snapshots/m1_screens__m1_credentials_0_120x40.snap
---
source: crates/nm-tui/tests/m1_screens.rs
expression: text
---
+Read-only network assessment------------------------------------------------------------------------------------------+
|NetworkMaster  |  Credentials  |  pre-alpha 0.0.1                                                                     |
+----------------------------------------------------------------------------------------------------------------------+
+Credentials | session-only; persistent storage arrives in M5----------------------------------------------------------+
|Profile                                     Kind                  Storage                Devices Session              |
|fleet                                       SSH password          SessionOnly            1       loaded               |
|                                                                                                                      |
|                                                                                                                      |
|                                                                                                                      |
|                                                                                                                      |
|                                                                                                                      |
|                                                                                                                      |
|                                                                                                                      |
|                                                                                                                      |
|                                                                                                                      |
|                                                                                                                      |
|                                                                                                                      |
|                                                                                                                      |
|                                                                                                                      |
|                                                                                                                      |
|                                                                                                                      |
|                                                                                                                      |
|                                                                                                                      |
|                                                                                                                      |
|                                                                                                                      |
|                                                                                                                      |
|                                                                                                                      |
|                                                                                                                      |
|                                                                                                                      |
|                                                                                                                      |
|                                                                                                                      |
|                                                                                                                      |
|                                                                                                                      |
|                                                                                                                      |
|                                                                                                                      |
|                                                                                                                      |
|                                                                                                                      |
+----------------------------------------------------------------------------------------------------------------------+
Ready. Network actions require enrollment.
n New  f Forget  Enter Devices  2 Inventory  4 Scan  q Quit
