crates/nm-tui/tests/snapshots/m1_screens__m1_devices_1_80x24.snap
---
source: crates/nm-tui/tests/m1_screens.rs
expression: text
---
+Read-only network assessment--------------------------------------------------+
|NetworkMaster  |  Devices  |  pre-alpha 0.0.1                                 |
+------------------------------------------------------------------------------+
+Snapshot 1/1 | [ ]--++Tab / Shift+Tab detail----------------------------------+
|+ Tower AP 100%     || System │ Interfaces │ Radio │ Config │ Raw │ Coverage  |
|                    |+--------------------------------------------------------+
|                    |+Interfaces----------------------------------------------+
|                    ||eth0  --                                                |
|                    ||Admin enabled / link unknown                            |
|                    ||Speed -- Mbps / unknown duplex                          |
|                    ||Addresses: 192.0.2.1/255.255.255.0                      |
|                    ||Role None / None (R edits override)                     |
|                    ||                                                        |
|                    ||                                                        |
|                    ||                                                        |
|                    ||                                                        |
|                    ||                                                        |
|                    ||                                                        |
|                    ||                                                        |
|                    ||                                                        |
|                    ||                                                        |
+--------------------++--------------------------------------------------------+
Ready. Network actions require enrollment.
Tab Detail  Up/Down Device  [ ] Snapshot  / Search  R Interface role  q Quit
