crates/nm-tui/tests/snapshots/m1_screens__m1_devices_3_120x40.snap
---
source: crates/nm-tui/tests/m1_screens.rs
expression: text
---
+Read-only network assessment------------------------------------------------------------------------------------------+
|NetworkMaster  |  Devices  |  pre-alpha 0.0.1                                                                         |
+----------------------------------------------------------------------------------------------------------------------+
+Snapshot 1/1 | [ ]--------------++Tab / Shift+Tab detail--------------------------------------------------------------+
|+ Tower AP 100%                 || System │ Interfaces │ Radio │ Config │ Raw │ Coverage                              |
|                                |+------------------------------------------------------------------------------------+
|                                |+Config------------------------------------------------------------------------------+
|                                ||sshd.status=enabled                                                                 |
|                                ||telnetd.status=disabled                                                             |
|                                ||httpd.status=enabled                                                                |
|                                ||httpd.https.status=enabled                                                          |
|                                ||httpd.port=80                                                                       |
|                                ||snmp.status=enabled                                                                 |
|                                ||snmp.community=<redacted>                                                           |
|                                ||discovery.status=disabled                                                           |
|                                ||ntpclient.status=enabled                                                            |
|                                ||ntpclient.1.server=192.0.2.10                                                       |
|                                ||upnpd.status=disabled                                                               |
|                                ||netmode=bridge                                                                      |
|                                ||wireless.1.ssid=fixture-ssid-1                                                      |
|                                ||wireless.1.security=wpa2                                                            |
|                                ||wireless.1.hide_ssid=disabled                                                       |
|                                ||radio.1.freq=5805                                                                   |
|                                ||radio.1.chanbw=20                                                                   |
|                                ||radio.1.txpower=18                                                                  |
|                                ||radio.1.countrycode=608                                                             |
|                                ||radio.1.obey=enabled                                                                |
|                                ||users.1.name=operator                                                               |
|                                ||users.1.password=<redacted>                                                         |
|                                ||resolv.host.1.name=fixture-host-1                                                   |
|                                ||netconf.1.devname=eth0                                                              |
|                                ||netconf.1.ip=192.0.2.1                                                              |
|                                ||netconf.1.netmask=255.255.255.0                                                     |
|                                ||netconf.1.status=enabled                                                            |
|                                ||route.1.ip=0.0.0.0                                                                  |
|                                ||route.1.gateway=192.0.2.254                                                         |
|                                ||route.1.devname=eth0                                                                |
+--------------------------------++------------------------------------------------------------------------------------+
Ready. Network actions require enrollment.
Tab Detail  Up/Down Device  [ ] Snapshot  / Search  R Interface role  q Quit
