crates/nm-tui/tests/snapshots/m1_screens__m1_devices_4_120x40.snap
---
source: crates/nm-tui/tests/m1_screens.rs
assertion_line: 224
expression: text
---
+Read-only network assessment------------------------------------------------------------------------------------------+
|NetworkMaster  |  Devices  |  pre-alpha 0.0.1                                                                         |
+----------------------------------------------------------------------------------------------------------------------+
+Snapshot 1/1 | [ ]--------------++Tab / Shift+Tab detail--------------------------------------------------------------+
|+ Tower AP 100%                 || System │ Interfaces │ Radio │ Config │ Raw │ Coverage                              |
|                                |+------------------------------------------------------------------------------------+
|                                |+Raw---------------------------------------------------------------------------------+
|                                ||> mca-dump.json (1235 bytes)                                                        |
|                                ||                                                                                    |
|                                ||                                                                                    |
|                                ||                                                                                    |
|                                ||                                                                                    |
|                                ||                                                                                    |
|                                ||                                                                                    |
|                                ||                                                                                    |
|                                ||                                                                                    |
|                                ||                                                                                    |
|                                ||                                                                                    |
|                                ||                                                                                    |
|                                ||                                                                                    |
|                                ||                                                                                    |
|                                ||                                                                                    |
|                                ||                                                                                    |
|                                ||                                                                                    |
|                                ||                                                                                    |
|                                ||                                                                                    |
|                                ||                                                                                    |
|                                ||                                                                                    |
|                                ||                                                                                    |
|                                ||                                                                                    |
|                                ||                                                                                    |
|                                ||                                                                                    |
|                                ||                                                                                    |
|                                ||                                                                                    |
|                                ||                                                                                    |
|                                ||                                                                                    |
|                                ||                                                                                    |
+--------------------------------++------------------------------------------------------------------------------------+
Ready. Network actions require enrollment.
Tab Detail  Up/Down Device  [ ] Snapshot  / Search  R Interface role  q Quit
